--- a/src/index.css
+++ b/src/index.css
@@ -146,3 +146,23 @@
 .slide-exit {
   animation: fadeOut 3s ease-out forwards;
 }
+
+.swiper-button-next,
+.swiper-button-prev {
+  color: white !important;
+  opacity: 0;
+  transition: opacity 0.3s;
+  background: rgba(0, 0, 0, 0.5);
+  padding: 2rem;
+  border-radius: 50%;
+  transform: scale(0.7);
+}
+
+.swiper:hover .swiper-button-next,
+.swiper:hover .swiper-button-prev {
+  opacity: 1;
+}
+
+.swiper-button-disabled {
+  opacity: 0 !important;
+}
